--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "dependencies": {
     "firebase": "^6.2.4",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-icons": "^3.8.0",
-    "react-scripts": "3.2.0",
-    "moment": "^2.24.0"
+    "react-moment": "^0.9.7",
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
